# coupled_oscillator

./: LICENSE  README.md  pyproject.toml
animations/: optimal_balance.py  physical_space.py  ramping.py
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst  package_api.rst
notebooks/: energy_conservation.ipynb  evolution_unbalanced.ipynb  gravity_ramping.ipynb  optimal_balance.ipynb  system_evolution.ipynb
src/coupled_oscillator/: __init__.py  hamiltonian.py  hamiltonian_approx.py  imbalance.py  oscillator_properties.py  phase.py  ramp_functions.py  solver.py
src/coupled_oscillator/balancing/: __init__.py  base.py  gravity_equilibrium.py  naive.py  optimal_balance.py
